a bit of landing page odne:

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,5 +11,5 @@ body {
     #1f1f1f,
     #001217
   ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #303030, #011014);
+  background: linear-gradient(to right, #2f0e1f, #643045);
 }
